template/test-template.yaml
apiVersion: v1
items:
- apiVersion: apps.openshift.io/v1
  kind: DeploymentConfig
  metadata:
    annotations:
      openshift.io/generated-by: PracticalOpenshift
    creationTimestamp: "2022-05-02T14:58:59Z"
    generation: 2
    labels:
      app: hello-world
    name: hello-world
    namespace: karan469-dev
    resourceVersion: "1191188650"
    uid: 80515b8b-acd5-4dc7-a113-04fa8c8c7d32
  spec:
    replicas: 1
    revisionHistoryLimit: 10
    selector:
      app: hello-world
      deploymentconfig: hello-world
    strategy:
      activeDeadlineSeconds: 21600
      resources: {}
      rollingParams:
        intervalSeconds: 1
        maxSurge: 25%
        maxUnavailable: 25%
        timeoutSeconds: 600
        updatePeriodSeconds: 1
      type: Rolling
    template:
      metadata:
        annotations:
          openshift.io/generated-by: OpenShiftNewApp
        creationTimestamp: null
        labels:
          app: hello-world
          deploymentconfig: hello-world
      spec:
        containers:
        - env:
          - name: MESSAGE
            value: Hello from oc process
          image: quay.io/practicalopenshift/hello-world@sha256:2311b7a279608de9547454d1548e2de7e37e981b6f84173f2f452854d81d1b7e
          imagePullPolicy: Always
          name: hello-world
          ports:
          - containerPort: 8080
            protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
        dnsPolicy: ClusterFirst
        restartPolicy: Always
        schedulerName: default-scheduler
        securityContext: {}
        terminationGracePeriodSeconds: 30
    test: false
    triggers:
    - type: ConfigChange
    - imageChangeParams:
        automatic: true
        containerNames:
        - hello-world
        from:
          kind: ImageStreamTag
          name: hello-world:latest
          namespace: karan469-dev
        lastTriggeredImage: quay.io/practicalopenshift/hello-world@sha256:2311b7a279608de9547454d1548e2de7e37e981b6f84173f2f452854d81d1b7e
      type: ImageChange
  status:
    availableReplicas: 1
    conditions:
    - lastTransitionTime: "2022-05-02T14:59:07Z"
      lastUpdateTime: "2022-05-02T14:59:07Z"
      message: Deployment config has minimum availability.
      status: "True"
      type: Available
    - lastTransitionTime: "2022-05-02T14:59:04Z"
      lastUpdateTime: "2022-05-02T14:59:10Z"
      message: replication controller "hello-world-1" successfully rolled out
      reason: NewReplicationControllerAvailable
      status: "True"
      type: Progressing
    details:
      causes:
      - type: ConfigChange
      message: config change
    latestVersion: 1
    observedGeneration: 2
    readyReplicas: 1
    replicas: 1
    unavailableReplicas: 0
    updatedReplicas: 1
- apiVersion: image.openshift.io/v1
  kind: ImageStream
  metadata:
    annotations:
      openshift.io/generated-by: OpenShiftNewApp
      openshift.io/image.dockerRepositoryCheck: "2022-05-02T14:59:00Z"
    creationTimestamp: "2022-05-02T14:59:00Z"
    generation: 2
    labels:
      app: hello-world
    name: hello-world
    namespace: karan469-dev
    resourceVersion: "1191188009"
    uid: facaef11-56d9-4167-aaba-74dc671e6f8d
  spec:
    lookupPolicy:
      local: false
    tags:
    - annotations:
        openshift.io/imported-from: quay.io/practicalopenshift/hello-world
      from:
        kind: DockerImage
        name: quay.io/practicalopenshift/hello-world
      generation: 2
      importPolicy: {}
      name: latest
      referencePolicy:
        type: Source
  status:
    dockerImageRepository: image-registry.openshift-image-registry.svc:5000/karan469-dev/hello-world
    publicDockerImageRepository: default-route-openshift-image-registry.apps.sandbox.x8i5.p1.openshiftapps.com/karan469-dev/hello-world
    tags:
    - items:
      - created: "2022-05-02T14:59:00Z"
        dockerImageReference: quay.io/practicalopenshift/hello-world@sha256:2311b7a279608de9547454d1548e2de7e37e981b6f84173f2f452854d81d1b7e
        generation: 2
        image: sha256:2311b7a279608de9547454d1548e2de7e37e981b6f84173f2f452854d81d1b7e
      tag: latest
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      openshift.io/generated-by: OpenShiftNewApp
    creationTimestamp: "2022-05-02T14:59:00Z"
    labels:
      app: hello-world
    name: hello-world
    namespace: karan469-dev
    resourceVersion: "1191187983"
    uid: 0523004a-018c-493c-a804-29e173f011e8
  spec:
    clusterIP: 172.30.102.131
    clusterIPs:
    - 172.30.102.131
    internalTrafficPolicy: Cluster
    ipFamilies:
    - IPv4
    ipFamilyPolicy: SingleStack
    ports:
    - name: 8080-tcp
      port: 8080
      protocol: TCP
      targetPort: 8080
    selector:
      app: hello-world
      deploymentconfig: hello-world
    sessionAffinity: None
    type: ClusterIP
  status:
    loadBalancer: {}
- apiVersion: route.openshift.io/v1
  kind: Route
  metadata:
    annotations:
      openshift.io/host.generated: "true"
    creationTimestamp: "2022-05-02T14:59:00Z"
    labels:
      app: hello-world
    name: hello-world
    namespace: karan469-dev
    resourceVersion: "1191187996"
    uid: ef71a22b-196a-47d3-a6dd-7eafb112800e
  spec:
    host: hello-world-karan469-dev.apps.sandbox.x8i5.p1.openshiftapps.com
    port:
      targetPort: 8080-tcp
    to:
      kind: Service
      name: hello-world
      weight: 100
    wildcardPolicy: None
  status:
    ingress:
    - conditions:
      - lastTransitionTime: "2022-05-02T14:59:00Z"
        status: "True"
        type: Admitted
      host: hello-world-karan469-dev.apps.sandbox.x8i5.p1.openshiftapps.com
      routerCanonicalHostname: router-default.apps.sandbox.x8i5.p1.openshiftapps.com
      routerName: default
      wildcardPolicy: None
kind: List
metadata:
  resourceVersion: ""
  selfLink: ""
